Fix social medias to bottom on mobile devices

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -147,7 +147,7 @@
 
 .socialMedia {
     z-index: 100;
-    position: absolute;
+    position: fixed;
     bottom: 0;
 }
 
